# triagebot

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  REVIEW.md  action.yml  pyproject.toml
.github/: triagebot.example.yml
.github/workflows/: ci.yml  triagebot-example.yml  triagebot.yml
docs/: configuration.md
src/triagebot/: __init__.py  classifier.py  config.py  events.py  github_client.py  main.py  missing_info.py
tests/: test_classifier.py  test_config.py  test_events.py  test_github_client.py  test_main.py  test_missing_info.py
